--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -68,6 +68,16 @@
   }
 }
 
+//BODY
+
+.cwrc-project-homepage .group-left .field, .cwrc-project-homepage .group-right .field {
+  ul li {
+    ul {
+      margin-left: ms(0);
+    }
+  }
+}
+
 
 
 /* =============================================================================
