--- a/sass/components/blocks/_carousel-block.scss
+++ b/sass/components/blocks/_carousel-block.scss
@@ -179,6 +179,8 @@
   margin-right: 1em;
   padding-left: 1em;
   top: 0;
+  position: relative;
+  z-index: 700;
   @include breakpoint(0 745px){
     margin-right: 0;
     padding-left: .1em;
@@ -205,6 +207,8 @@
 
 .view-nodequeue-projects-featured .field-name-body {
   font-weight: $bold;
+  position: relative;
+  z-index: 100;
 }
 
 .view-nodequeue-projects-featured .field-name-node-link {
