--- a/sass/components/search/_search-results.scss
+++ b/sass/components/search/_search-results.scss
@@ -1,7 +1,10 @@
 
+/* =============================================================================
+    RESULTS
+   ========================================================================== */
 
 // search results
-
+/*
 .spelling-suggestions{
   @extend %box-ui-light-simple;
   @include ui-box($box-padding: ms(1));
@@ -35,3 +38,167 @@
     margin-bottom: ms();
   }
 }
+*/
+
+
+.cwrc-search-wrapper .results {
+  float: left;
+  border-top: 1px solid $shade3;
+  padding-top: 1em;
+  width: 100%;
+
+  p.no-results,
+  span.no-results {
+    padding: 0;
+    font-style: italic;
+  }
+}
+
+ul.results {
+  border-radius: 5px;
+  border-top: none !important;
+  margin-top: 1em;
+
+  li.result {
+    border-bottom: 1px solid $shade3;
+    border-top: none;
+    margin-bottom: 0;
+    padding: 1em 0;
+
+    a {
+      text-decoration: none;
+      font-weight: $bold;
+      font-size: ms(-.4);
+    }
+  }
+}
+
+
+//SUMMARY
+
+.cwrc-search-wrapper {
+  .results-summary {
+    margin-top: ms(0);
+    float: left;
+  }
+}
+
+//SOLR
+
+dl.solr-fields {
+  border-top: none;
+}
+
+
+//LITS - DOCUMENTS
+
+
+
+//images
+
+dl.solr-thumb {
+  width: 100%;
+  margin: 0 0 .5em;
+
+  dt{
+    background: #fff;
+    display: inline-block;
+    vertical-align: top;
+    width: 130px;
+    height: 130px;
+    margin-right: .5em;
+    margin-bottom: .3em;
+    a {
+      display: block;
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+      img {
+        background: $brand4;
+        border-radius: 5px;
+        border: none;
+        display: block;
+        min-width: 100%;
+        min-height: 100%;
+        margin: auto;
+        position: absolute;
+        top: -100%;
+        right: -100%;
+        bottom: -100%;
+        left: -100%;
+      }
+    }
+  }
+}
+
+
+//result item
+
+dl.solr-fields {
+  width: 100%;
+}
+
+.islandora-solr-search-result {
+  font-size: ms(-.2);
+  padding-top: 1em;
+  border: 1px solid $shade3;
+  padding: .7em;
+  border-radius: 5px;
+}
+
+.solr-fields dt, .solr-fields dd {
+  border-top: 1px solid $shade3;
+}
+
+
+//GRID
+
+.cwrc-search-wrapper .islandora-solr-grid  {
+  margin: 0 0 ms(0);
+  width: 100%;
+
+  .solr-grid-thumb img {
+    background-color: $brand4;
+    height: 70px;
+  }
+
+  dl.solr-grid-field {
+    border: 1px solid $shade3;
+    border-radius: 5px;
+    padding: .7em;
+    width: 31.5%;
+    margin: 0;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    float: left;
+    position: relative;
+    @include breakpoint(0 550px) {
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: ms(0);
+    }
+  }
+
+  dl.solr-grid-field:nth-child(3n+3){
+    margin-right: 0;
+  }
+
+  .solr-grid-caption a {
+    text-decoration: none;
+    font-weight: bold;
+
+    &:after {
+      @extend %icon-arrow-right;
+      position: absolute;
+      right: 5px;
+      bottom: 5px;
+      top: auto;
+      color: $brand4;
+    }
+  }
+}
+
+ul#secondary-display-profiles {
+  display: none;
+}
+
